# job-candidate-matcher

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
api/: .env.example  AGENTS.md  railpack.json
api/app/core/: settings.py
api/app/infrastructure/: db.py  exceptions.py
api/app/models/: candidate.py  evaluation.py
api/app/repositories/: __init__.py  evaluation_repository.py
api/app/routers/: __init__.py  evaluation_router.py  job_router.py
api/app/schemas/: candidate.py  job.py
app/: __init__.py  main.py
app/core/: logger.py  settings.py
app/infrastructure/: db.py  exceptions.py
app/models/: __init__.py  evaluation.py  job.py  tool_log.py
app/repositories/: candidate_repository.py  evaluation_repository.py  job_repository.py
app/routers/: candidate_router.py  evaluation_router.py
app/schemas/: evaluation.py
app/services/: evaluation_processor.py  evaluation_service.py
docs/: README.md  api.md  architecture.md  setup.md  stack.md  testing.md
scripts/: seed.sql
skills/git-commit/: SKILL.md
skills/langchain-agent-architecture/: SKILL.md
skills/langchain-agents/: SKILL.md
skills/langchain-tests/: SKILL.md
skills/pnpm/: SKILL.md
skills/pr-creation/: SKILL.md
skills/preact-ui/: SKILL.md
skills/pytest-testing/: SKILL.md
skills/tailwind-4/: SKILL.md
skills/uv-python/: SKILL.md
skills/zod-4/: SKILL.md
web/: AGENTS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: app.tsx  index.css  main.tsx
(+64 files in other folders)
